# AI_Watch_A1

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  caruso_denny_tesi_bsc_cs.key  caruso_denny_tesi_bsc_cs_keynote.key
design/: ai_watch.sketch  ai_watch_coordinate_mapping.sketch
doc/: _body_key_point_8cpp.html  _body_key_point_8cpp_source.html  _body_key_point_8hpp.html  _body_key_point_8hpp_source.html  _clean_command_8cpp.html  _clean_command_8cpp_source.html  _coordinate_mapping_manager_8cpp.html  _coordinate_mapping_manager_8cpp_source.html  _coordinate_mapping_manager_8hpp.html  _coordinate_mapping_manager_8hpp_source.html  _facade_singleton_8cpp.html  _facade_singleton_8cpp_source.html  _facade_singleton_8hpp.html  _facade_singleton_8hpp_source.html  _image_manager_8cpp.html  _image_manager_8cpp_source.html  _image_manager_8hpp.html  _image_manager_8hpp_source.html  _kafka_manager_8cpp.html  _kafka_manager_8cpp_source.html  _kafka_manager_8hpp.html  _kafka_manager_8hpp_source.html  _move_command_8cpp.html  _move_command_8cpp_source.html  _open_c_v___manager_8cpp.html  _open_c_v___manager_8cpp_source.html  _open_c_v___manager_8hpp.html  _open_c_v___manager_8hpp_source.html  _open_pose_command_8cpp.html  _open_pose_command_8cpp_source.html  _output_manager_8cpp.html  _output_manager_8cpp_source.html  _output_manager_8hpp.html  _output_manager_8hpp_source.html  _output_manager_j_s_o_n_8cpp.html  _output_manager_j_s_o_n_8cpp_source.html  _point3_d_8cpp.html  _point3_d_8cpp_source.html  _point3_d_8hpp.html  _point3_d_8hpp_source.html  (+91 more)
doc/html/: _body_key_point_8cpp_source.html  _body_key_point_8hpp_source.html  _clean_command_8cpp_source.html  _coordinate_mapping_manager_8hpp.html  _coordinate_mapping_manager_8hpp_source.html  (+43 more)
docs/: BodyKeyPoint_8cpp.html  BodyKeyPoint_8cpp_8o_8d.html  BodyKeyPoint_8cpp_8o_8d_source.html  BodyKeyPoint_8cpp_source.html  BodyKeyPoint_8hpp.html  BodyKeyPoint_8hpp_source.html  CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  CVPR__Lab_8cpp.html  CVPR__Lab_8cpp_8o_8d.html  CVPR__Lab_8cpp_8o_8d_source.html  CVPR__Lab_8cpp_source.html  CVPR__Lab_8hpp.html  CVPR__Lab_8hpp_source.html  CleanCommand_8cpp.html  CleanCommand_8cpp_8o_8d.html  CleanCommand_8cpp_8o_8d_source.html  CleanCommand_8cpp_source.html  CoordinateMappingManager_8cpp.html  CoordinateMappingManager_8cpp_8o_8d.html  CoordinateMappingManager_8cpp_8o_8d_source.html  CoordinateMappingManager_8cpp_source.html  CoordinateMappingManager_8hpp.html  CoordinateMappingManager_8hpp_source.html  FacadeSingleton_8cpp.html  FacadeSingleton_8cpp_8o_8d.html  FacadeSingleton_8cpp_8o_8d_source.html  FacadeSingleton_8cpp_source.html  FacadeSingleton_8hpp.html  FacadeSingleton_8hpp_source.html  ImageManager_8cpp.html  ImageManager_8cpp_8o_8d.html  ImageManager_8cpp_8o_8d_source.html  ImageManager_8cpp_source.html  ImageManager_8hpp.html  ImageManager_8hpp_source.html  KafkaManager_8cpp.html  KafkaManager_8cpp_8o_8d.html  (+224 more)
kafka-c-getting-started/: CMakeLists.txt  consumer.c  producer.c
legal/: LICENSE_librdkafka
licenses/: LICENSE_OpenPose  LICENSE_jsoncpp  LICENSE_librealsense  NOTICE
src/: Skeleton.cpp  Skeleton.hpp  centralObject_distance.cpp  draw_skeleton.cpp  json_reader.cpp  rgb+d_stream.cpp  rs_opencv_integration.cpp  save_image_and_metadata.cpp
src/AI_Watch_A1/: CMakeLists.txt  Doxyfile  Skeleton.cpp  Skeleton.hpp  configuration_file.ini  constants.hpp  hello_librealsense2.cpp  main.cpp
src/AI_Watch_A1/Command/: CleanCommand.cpp  MoveCommand.cpp  OpenPoseCommand.cpp  SystemCommand.cpp  SystemCommand.hpp
src/AI_Watch_A1/FacadeSingleton/: FacadeSingleton.cpp  FacadeSingleton.hpp
src/AI_Watch_A1/Managers/: ImageManager.cpp  ImageManager.hpp  KafkaManager.cpp  KafkaManager.hpp  OpenCV_Manager.cpp  OpenCV_Manager.hpp  UsageManager.cpp  UsageManager.hpp
src/AI_Watch_A1/Managers/CoordinateManagers/: CoordinateMappingManager.cpp  CoordinateMappingManager.hpp  UnityCoordinateMappingManager.cpp
src/AI_Watch_A1/Managers/OutputManagers/: OutputManager.cpp  OutputManager.hpp  OutputManagerJSON.cpp
src/AI_Watch_A1/Managers/RealSenseManagers/: RealSenseD435Manager.cpp  RealSenseManager.cpp  RealSenseManager.hpp
src/AI_Watch_A1/Points/: BodyKeyPoint.cpp  BodyKeyPoint.hpp  Point.cpp  Point.hpp  Point3D.cpp  Point3D.hpp
src/AI_Watch_A1/Room/: CVPR_Lab.cpp  CVPR_Lab.hpp  Room.cpp  Room.hpp
src/draw_skeleton_video_3D/: BodyKeyPoint.cpp  BodyKeyPoint.hpp  CMakeLists.txt  FacadeSingleton.cpp  FacadeSingleton.hpp  FlyweightFactoryW_Mat.cpp  FlyweightFactoryW_Mat.hpp  JSON_Manager.cpp  JSON_Manager.hpp  Point.cpp  Point.hpp  Point3D.cpp  Point3D.hpp  RealSenseD435Manager.cpp  RealSenseD435Manager.hpp  SingleBodyKeypoint.cpp  SingleBodyKeypoint.hpp  SinglePoint3D.hpp  Skeleton.cpp  Skeleton.hpp  UsageUtility.cpp  UsageUtility.hpp  W_Mat.cpp  W_Mat.hpp  constants.hpp  doxygen_main.cpp  draw_skeleton_video_3D.cpp  hello_librealsense2.cpp
src/draw_skeleton_video_3D/Command/: CleanCommand.cpp  MoveCommand.cpp  OpenPoseCommand.cpp  SystemCommand.cpp  SystemCommand.hpp
src/draw_skeleton_video_3D/FacadeSingleton/: FacadeSingleton.cpp  FacadeSingleton.hpp
src/draw_skeleton_video_3D/JSON_Manager/: JSON_Manager.hpp
src/draw_skeleton_video_3D/Managers/: CoordinateMappingManager.cpp  CoordinateMappingManager.hpp  ImageManager.hpp  ImagesManager.cpp  ImagesManager.hpp  KafkaManager.cpp  KafkaManager.hpp  OpenCV_Manager.cpp  OpenCV_Manager.hpp  UsageManager.cpp  UsageManager.hpp
src/draw_skeleton_video_3D/Managers/CoordinateManagers/: CoordinateMappingManager.cpp  CoordinateMappingManager.hpp  UnityCoordinateMappingManager.cpp
src/draw_skeleton_video_3D/Managers/OutputManagers/: OutputManager.cpp  OutputManager.hpp  OutputManagerJSON.cpp
src/draw_skeleton_video_3D/Managers/RealSenseManagers/: RealSenseD435Manager.cpp  RealSenseManager.cpp  RealSenseManager.hpp
src/draw_skeleton_video_3D/Points/: BodyKeyPoint.cpp  BodyKeyPoint.hpp  Point.cpp  Point.hpp  Point3D.hpp
uml/: class_diagram.mdj  class_diagram_light.mdj
(+510 files in other folders)
